manifests/monitoring/promtheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: ingress-prometheus
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: prom.telecom-project.club
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific 
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
